fix typo and add eww

--- a/hypr/configs/animations.conf
+++ b/hypr/configs/animations.conf
@@ -3,11 +3,11 @@
 #####################
 
 general {
-    gaps_in = 6
-    gaps_out = 10
+    gaps_in = 3
+    gaps_out = 5
     border_size = 2
-    col.active_border = rgba(d20f39ff) rgba(f5c2e7ff) 90deg   # merah darah ke pink anime
-    col.inactive_border = rgba(11111baa)
+    col.active_border = rgba(207,11,60,0.5)   # merah darah ke pink anime
+    col.inactive_border = rgba(0,0,0,0)
     resize_on_border = true
     allow_tearing = false
     layout = dwindle
@@ -32,11 +32,9 @@ decoration {
     # Blur
     blur {
         enabled = true
-        size = 2
-        passes = 3
-        noise = 0.012
-        vibrancy = 0.18
-        new_optimizations = true
+        size = 3
+        passes = 1
+        vibrancy = 0.1696
     }
 }
 
