--- a/hypr/configs/keybindings.conf
+++ b/hypr/configs/keybindings.conf
@@ -5,7 +5,7 @@ $menu = rofi -show drun
 $browser = brave
 $music = sh -c "$terminal -e cmus"
 $cava= sh -c "$terminal -e cava"
-
+$scripts = $HOME/.config/hypr/scripts
 ###################
 ### KEYBINDINGS ###
 ###################
@@ -16,7 +16,7 @@ bind = $mainMod, A, exec, $music
 bind = $mainMod, B, exec, $browser
 bind = $mainMod, C, killactive,
 bind = $mainMod, D, exec, discord
-bind = $mainMod, E, exec, $fileManage
+bind = $mainMod, E, exec, $fileManager
 # bind = $mainMod, F, exec, 
 # bind = $mainMod, G, exec,
 # bind = $mainMod, H, exec,
@@ -25,7 +25,7 @@ bind = $mainMod, J, togglesplit, # dwindle
 # bind = $mainMod, K, exec,
 bind = $mainMod, L, exec, systemctl suspend
 bind = $mainMod, M, exit,
-# bind = $mainMod, N, exec, 
+bind = $mainMod, N, exec, $scripts/randomwal.sh
 # bind = $mainMod, O, exec,
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, Q, exec, $terminal 
@@ -35,7 +35,7 @@ bind = $mainMod, T, exec, Telegram
 # bind = $mainMod, U, exec, 
 bind = $mainMod, V, exec, code
 bind = $mainMod, W, togglefloating,
-bind = $mainMod, X, exec, $HOME/.config/hypr/configs/toggle-waybar.sh 
+bind = $mainMod, X, exec, $scripts/toggle-waybar.sh
 # bind = $mainMod, Y exec,
 bind = $mainMod, Z, exec, $cava 
 bind = $mainMod SHIFT, Q,  exec, $terminal --class floatingterm
@@ -88,9 +88,9 @@ bind = $mainMod SHIFT, 0, movetoworkspace, 10
 # bind = ,F6, exec,
 # bind = ,F7, exec,
 # bind = ,F8, exec,
-# bind = ,F9, exec,
-bind = ,F10, exec, mpv --loop=inf ~/Videos/march7th.mp4
-bind = ,F11, exec, $HOME/.local/bin/record
+# bind = ,F9, exec, 
+bind = ,F10, exec, $HOME/.local/bin/record #mpv --loop=inf ~/Videos/march7th.mp4
+bind = ,F11, fullscreen,
 bind = ,F12, exec, notify-send -t 5000 "         DATE & TIME         " "  $(LC_TIME=en_US.UTF-8 date '+ %A, %B %d, %Y\n           %H:%M:%S')     "
 
 
