--- a/hypr/configs/startup.conf
+++ b/hypr/configs/startup.conf
@@ -2,14 +2,18 @@
 ### AUTOSTART ###
 #################
 
+$scripts = $HOME/.config/hypr/scripts
+
 # exec-once = $terminal
 # exec-once = nm-applet &
 # exec-once = waybar & hyprpaper & firefox
 # exec-once = waybar  
 exec-once = mako
-exec-once = $HOME/.config/hypr/configs/cmus-notifier.sh
+exec-once = eww daemon
+exec-once = $scripts/cmus-notifier.sh
 exec-once = swww-daemon & sleep 1 && swww img $HOME/.config/hypr/wallpaper/wallpaper.jpg --transition-type none
 exec-once = /usr/bin/gnome-keyring-daemon --start --components=secrets,pkcs11,ssh,gpg
 exec-once = udiskie --no-tray --automount > /dev/null 2>&1 &
-exec-once = ~/.config/eww/topbar/launch_bar
-
+exec-once = hypridle
+exec-once = $HOME/.config/eww/scripts/volume_update.sh
+exec-once = eww open bar_widget
