--- a/hypr/configs/variable.conf
+++ b/hypr/configs/variable.conf
@@ -14,3 +14,4 @@ env = QT_WAYLAND_DISABLE_WINDOWDECORATION,1
 env = XDG_SESSION_TYPE,wayland
 env = XDG_CURRENT_DESKTOP,Hyprland
 env = XDG_SESSION_DESKTOP,Hyprland
+env = XCURSOR_PATH, /usr/share/icons:/home/$USER/.icons:/home/$USER/.local/share/icons
