--- a/hypr/configs/windowrule.conf
+++ b/hypr/configs/windowrule.conf
@@ -10,5 +10,5 @@ windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned
 windowrulev2 = float,class:^(floatingterm)$
 windowrulev2 = center,class:^(floatingterm)$
 layerrule = animation slide, waybar
-layerrule = blur, waybar
+layerrule = blur, waybar class:waybar
 layerrule = ignorezero, waybar
