--- a/hypr/hyprlock.conf
+++ b/hypr/hyprlock.conf
@@ -1,104 +1,173 @@
-source = $HOME/.cache/wal/colors-hyprland
-
-background {
-    monitor =
-    path = $HOME/.config/hypr/wallpaper/wallpaper.jpg  # only png supported for now
-    color = $color7
-
-    # all these options are taken from hyprland, see https://wiki.hyprland.org/Configuring/Variables/#blur for explanations
-    blur_size = 2
-    blur_passes = 3 # 0 disables blurring
-    noise = 0.0117
-    contrast = 1.3000 # Vibrant!!!
-    brightness = 0.8000
-    vibrancy = 0.2100
-    vibrancy_darkness = 0.0
+general{
+	hide_cursor = true
+	ignore_empty_input = true
 }
 
-input-field {
-    monitor =
-    size = 250, 50
-    outline_thickness = 3
-    dots_size = 0.2 # Scale of input-field height, 0.2 - 0.8
-    dots_spacing = 1.00 # Scale of dots' absolute size, 0.0 - 1.0
+background{
+	path = $HOME/.config/hypr/wallpaper/wallpaper.jpg
+	blur_size=5
+	brightness = 0.7
+	blur_passes=1
+}
+
+
+input-field{
+	size = 200,50
+	outline_thickness = 3
+	dots_size = 0.33
+	dots_spacing = 0.15
     dots_center = true
-    outer_color = $color1
-    inner_color = $color0
-    font_color = $color7
-    fade_on_empty = true
-    placeholder_text = <i>Password...</i> # Text rendered in the input box when it's empty.
-    hide_input = false
-    position = 0, 50
+	dots_rounding = -1
+	outer_color = rgb(15,15,15)
+	inner_color = rgba(200,200,200,0.7)
+	font_color = rgb(10,10,10)
+	font_family = Monocraft Nerd Font
+	fade_on_empty = false
+	fade_timeout = 1000
+	placeholder_text = <i>Password</i>
+	hide_input = false
+	rounding = -1
+	check_color = rgb(204,136,34)
+	fail_color = rgb(204,34,34)
+	fail_text = <i>$FAIL <b>($ATTEMPTS)</b></i>
+	capslock_color = -1
+	bothlock_color = -1
+	invert_numlock = false
+	swap_font_color = false
+	position = 0,-100
+	halign = center
+ 	valign = center 
+}
+
+label{
+    text = cmd[update:50] cat  ~/.config/hypr/scripts/text_animation/scripttext
     halign = center
+    valign = center
+    position = 6,344
+    color = rgba(0, 0, 0,1.0)
+    font_size = 50
+    font_family = Monocraft Nerd Font
+}
+
+label{
+    text = cmd[update:50] cat ~/.config/hypr/scripts/text_animation/scripttext
+    halign = center
+    valign = center
+    position = 3,347
+    color = rgba(69, 118, 255,1.0)
+    font_size = 50
+    font_family = Monocraft Nerd Font
+}
+
+label{
+    text = cmd[update:50] cat ~/.config/hypr/scripts/text_animation/scripttext
+    halign = center
+    valign = center
+    position = 0,350
+    color = rgba(220, 220, 220,1.0)
+    font_size = 50
+    font_family = Monocraft Nerd Font
+}
+
+label{
+	text = cmd[update:1000] cat ~/.config/hypr/scripts/weather/weathertext
+	color = rgba(240, 151, 175, 1) 
+	font_size = 10
+    font_family = Monocraft Nerd Font
+    position = 65, 42
+    halign = left
     valign = bottom
 }
 
-#Top text
-label {
-    monitor =
-    text = ぼっち・
-    color = $color6
-    font_size = 12
-    font_family = Source Han Sans JP 10
-    position = -38, -45
-    halign = center
-    valign = top
-}
-label {
-    monitor =
-    text = ざ
-    color = $color3
-    font_size = 12
-    font_family = Source Han Sans JP 10
-    position = 3, -45
-    halign = center
-    valign = top
-}
-label {
-    monitor =
-    text = ・ろっく！
-    color = $color4
-    font_size = 12
-    font_family = Source Han Sans JP 10
-    position = 53, -45
-    halign = center
-    valign = top
+shape{
+    color=rgba(255, 51, 105,1.0)
+    rounding=1
+    halign=left
+	valign=bottom
+    position = 55,40
+    size=5,20
 }
 
-# Current time
-label {
-    monitor =
-    text = cmd[update:1000] echo "<b><big> $(date +"%H:%M:%S") </big></b>"
-    color = $color3
-    font_size = 64
-    font_family = Jetbrains Mono 10
-    position = 0, 150
+shape{
+    color=rgba(0,0,0,0.4)
+    rounding=8
+    halign=left
+    valign=bottom
+    position = 55,35
+    size=321,30  //change size dynamically
+}
+
+label{
+	text = cmd[update:1000] echo "$TIME12"
+	color = rgba(200,200,200,1.0)
+	font_size = 55
+	font_family = Monocraft Nerd Font
+	position = -50,110
+	halign = right
+	valign = bottom
+	shadow_passes = 5
+	shadow_size = 10
+}
+
+label{
+    text = cmd[update:60] date +"%A, %B %d, %Y"
+	color = rgba(200,200,200,1.0)
+	font_size = 25
+	font_family = Monocraft Nerd Font
+	position = -50,40
+	halign = right
+	valign = bottom
+	shadow_passes = 5
+	shadow_size = 10
+}
+
+image{
+    path = /var/lib/AccountsService/icons/$USER
+    size = 185
+    border_size = 7
+    border_color = rgba(21,21,21,0.6)
     halign = center
     valign = center
+    position = 0,100
 }
 
-# User label
-label {
-    monitor =
-    text = Hi there, <span size="larger">$USER</span>
-    color = $color6
+label{
+	text = $USER
+	color = rgba(200,200,200,1.0)
     font_size = 20
-    font_family = Source Han Sans JP 10
-    position = 0, 0
+    font_family = Monocraft Nerd Font
+    position = 0,-40
     halign = center
     valign = center
+    shadow_passes = 5
+    shadow_size = 10
 }
 
+shape{
+    color=rgba(252, 186, 3,1)
+    rounding=1
+    halign=left
+    valign=bottom
+    position = 385,41
+	size=5,20
+}
 
-# Type to unlock
-label {
-    monitor =
-    text = Type to unlock!
-    color = $color4
-    font_size = 16
-    font_family = JetBrains Mono Nerd Font 10
-    position = 0, 20
-    halign = center
+label{
+    text = cmd[update:1000] echo -e "$(~/.config/hypr/scripts/battery.sh)"
+    color = rgba(247,225,161,1.0)
+    font_size = 10
+    font_family = Monocraft Nerd Font
+    position = 397,40
+    halign = left
     valign = bottom
 }
 
+shape{
+    color=rgba(0,0,0,0.4)
+    rounding=8
+    halign=left
+    valign=bottom
+    position = 385,35
+    size=70,30
+}
+   
