--- a/hypr/configs/animations.conf
+++ b/hypr/configs/animations.conf
@@ -2,6 +2,7 @@
 ### LOOK AND FEEL ###
 #####################
 
+# General settings
 general {
     gaps_in = 3
     gaps_out = 5
@@ -20,7 +21,8 @@ decoration {
 
     # Change transparency of focused and unfocused windows
     active_opacity = 1.0
-    inactive_opacity = 1.0
+    inactive_opacity = 0.7
+
 
     shadow {
         enabled = true
@@ -32,8 +34,8 @@ decoration {
     # Blur
     blur {
         enabled = true
-        size = 3
-        passes = 1
+        size = 5
+        passes = 2
         vibrancy = 0.1696
     }
 }
@@ -94,3 +96,16 @@ animations {
     
 }
 
+
+dwindle {
+    pseudotile = true # Master switch for pseudotiling. Enabling is bound to mainMod + P in the keybinds section below
+    preserve_split = true # You probably want this
+}
+master {
+    new_status = master
+}
+
+misc {
+    force_default_wallpaper = -1 # Set to 0 or 1 to disable the anime mascot wallpapers
+    disable_hyprland_logo = true # If true disables the random hyprland logo / anime girl background. :(
+}
