--- a/hypr/configs/keybindings.conf
+++ b/hypr/configs/keybindings.conf
@@ -135,3 +135,24 @@ bind = CTRL SHIFT, Print, exec, bash -c 'geo=$(slurp); grim -g "$geo" - | wl-cop
 
 #lock
 bind = CTRL ALT, L, exec, hyprlock
+
+
+$d=[$wm|Resize Active Window]
+# Resize windows
+bindde = $mainMod Shift, Right, $d resize window right , resizeactive, 30 0
+bindde = $mainMod Shift, Left, $d resize window left, resizeactive, -30 0
+bindde = $mainMod Shift, Up, $d resize window up, resizeactive, 0 -30
+bindde = $mainMod Shift, Down, $d resize  window down, resizeactive, 0 30
+
+
+# Move active window around current workspace with mainMod + Shift + Control [←→↑↓]
+$d=[$wm|Move active window across workspace]
+$moveactivewindow=grep -q "true" <<< $(hyprctl activewindow -j | jq -r .floating) && hyprctl dispatch moveactive
+bindde = $mainMod Shift Control, left, Move active window to the left, exec, $moveactivewindow -30 0 || hyprctl dispatch movewindow l
+bindde = $mainMod Shift Control, right, Move active window to the right, exec, $moveactivewindow 30 0 || hyprctl dispatch movewindow r
+bindde = $mainMod Shift Control, up, Move active window up, exec, $moveactivewindow  0 -30 || hyprctl dispatch movewindow u
+bindde = $mainMod Shift Control, down, Move active window down, exec, $moveactivewindow 0 30 || hyprctl dispatch movewindow d
+
+$d=[$wm|Group Navigation]
+bindd = $mainMod Control, H, $d change active group backwards   , changegroupactive, b
+bindd = $mainMod Control, L, $d change active group forwards  , changegroupactive, f
