add screenshot launcher

--- a/hypr/configs/startup.conf
+++ b/hypr/configs/startup.conf
@@ -19,10 +19,10 @@ exec-once = eww open bar_widget
 exec-once = $scripts/text_animation/anitext.sh
 exec-once = $scripts/weather/weather.sh
 # exec-once = $scripts/text_animation/bijilu.sh
-exec-once = $scripts/cmus_notifier.sh
+# exec-once = $scripts/cmus_notifier.sh
 exec-once = $HOME/.config/eww/scripts/getvol.sh
 
 #Wallpaper
 exec-once = swww-daemon
 # exec-once = swww img $wallpaper/wallpaper_010.png --transition-type none
-exec-once = $scripts/randomwallpaper.sh
+exec-once = $scripts/randomwallpaper.sh daemon
