--- a/hypr/configs/decorations.conf
+++ b/hypr/configs/decorations.conf
@@ -7,25 +7,25 @@ general {
     gaps_in = 2
     gaps_out = 5
     border_size = 3
-    col.active_border = rgba(43,233,182,0.5) rgba(11,184,207,0.5) rgba(70,11,207,0.5) rgba(11,207,63,0.5)
+    col.active_border = rgba(255,182,193,1) rgba(217,208,212,1) rgba(255,105,180,1)
     col.inactive_border = rgba(0,0,0,0) rgba(0,0,0,1)
-    resize_on_border = true
+    resize_on_border = false
     allow_tearing = false
     layout = dwindle
 }
 
-# Decoration
+# Decorations
 decoration {
     rounding = 10
     rounding_power = 2
 
     # Change transparency of focused and unfocused windows
     active_opacity = 1.0
-    inactive_opacity = 0.75
+    inactive_opacity = 0.76
 
 
     shadow {
-        enabled = false
+        enabled = true
         range = 5
         render_power = 3
         color = rgba(1a1a1aee)
