--- a/hypr/configs/keybindings.conf
+++ b/hypr/configs/keybindings.conf
@@ -1,68 +1,79 @@
 # Set programs that you use
+$scripts = $HOME/.config/hypr/scripts
 $terminal = kitty
-$file = sh -c "$terminal -e yazi"
+$file =  $terminal -e $scripts/yazi.sh
 $menu = rofi -show drun
 $browser = brave
-$music = sh -c "$terminal -e cmus"
-$cava= sh -c "$terminal -e cava"
-$scripts = $HOME/.config/hypr/scripts
-$Sspotify = LD_PRELOAD=/usr/lib/spotify-adblock.so spotify
-
+$music = $terminal -e cmus
+$cava= $terminal -e cava
+$Spotify = LD_PRELOAD=/usr/lib/spotify-adblock.so spotify
+$btop= $terminal -e btop
 ###################
 ### KEYBINDINGS ###
 ###################
 
 $mainMod = SUPER
 
-bind = $mainMod, A, togglesplit,
-bind = $mainMod, B, exec, $browser
-bind = $mainMod, C, killactive,
-bind = $mainMod, D, exec, discord
-bind = $mainMod, E, exec, $file
-# bind = $mainMod, F, exec, 
-bind = $mainMod, G, togglegroup, 
-# bind = $mainMod, H, exec,
-# bind = $mainMod, I, exec,
-# bind = $mainMod, J, togglesplit, # dwindle
-# bind = $mainMod, K, exec,
-bind = $mainMod, M, exec, $scripts/toggle_waybar.sh
-bind = $mainMod, N, exec, $scripts/randomwallpaper.sh
-# bind = $mainMod, O, exec,
-bind = $mainMod, P, pseudo, # dwindle
+# Open application
 bind = $mainMod, Q, exec, $terminal
 bind = $mainMod, R, exec, $menu
 bind = $mainMod, T, exec, Telegram
-# bind = $mainMod, U, exec, 
-bind = $mainMod, V, exec, code
-bind = $mainMod, W, togglefloating,
-# bind = $mainMod, Y exec,
-bind = CTRL ALT, Q,  exec, [float; move 20% 17.5%; size 60% 65%] $terminal #--class floatingterm
+bind = $mainMod, D, exec, discord
+bind = $mainMod, E, exec, $file
+
+
+
+# Floating aplication
+bind = CTRL SHIFT, Escape, exec, [float; move 20% 17.5%; size 60% 65%] $btop  
+bind = CTRL ALT, E, exec, [float; move 0.5% 1%; size 55% 56% ] $file
+bind = CTRL ALT, C, exec, [float; move 51.50% 64%; size 48% 35%] $cava
+bind = CTRL ALT, S, exec, [float; move -3.5% -3.5%; size 50% 60%] $Spotify 
+bind = CTRL ALT, X, exec, [float; move 0.5% 5%; size 55% 56% ] $music
+bind = $mainMod SHIFTs, Q,  exec, [float; move 20% 17.5%; size 60% 65%] $terminal
+bind = $mainMod SHIFT, C, exec, [float; move 0.5% 74%; size 99% 25%] $cava
+bind = SHIFT, F12, exec, [float; move 59.5% 6%; size 39.5% 65% ] mpv --loop=inf --no-audio  $HOME/Videos/random/lupa.mp4
+
+# Exec scripts
+bind = $mainMod, M, exec, $scripts/toggle_waybar.sh
+bind = $mainMod, N, exec, $scripts/randomwallpaper.sh next
 bind = $mainMod, return, exec, $scripts/power_menu.sh
-bind = $mainMod SHIFT, R, exec, hyprctl reload
-bind = $mainMod, BACKSPACE, exit,
-bind = Alt, Return, fullscreen, # toggle the window between focus and fullscreen
-bind = Ctrl+Shift, Escape, exec, [float; move 20% 17.5%; size 60% 65%] $terminal -e btop  #[float; move 20% 10%; size 60% 65%]
-bind = Ctrl+Alt, E, exec, [float; move 0.5% 1%; size 55% 56% ] $file
-bind = Ctrl+Alt, C, exec, [float; move 51.50% 64%; size 48% 35%] $cava
-bind = Ctrl+Alt, S, exec, [float; move -3.5% -3.5%; size 50% 60%] $Sspotify # [float; move -3.5% -7.9%; size 50% 60%] $Sspotify
-bind = Ctrl+Alt, X, exec, [float; move 0.5% 5%; size 55% 56% ] $music
-bind = Ctrl+Alt, G, exec, $scripts/governor.sh
-bind = Ctrl+Alt, M, exec, $scripts/mount_hdd.sh
-bind = $mainMod SHIFT, TAB, changegroupactive, f
-$d=[$wm|Group Navigation]
+bind = ,F8, exec, $scripts/toggle_hypridle.sh
+bind = ,F9, exec, $scripts/game_menu.sh
+bind = ,F10, exec, $scripts/record.sh
+bind = ,F12, exec, $scripts/time.sh
+bind = , Print, exec, $scripts/scr.sh full 
+bind = SHIFT_R, Print, exec, $scripts/scr.sh area
+bind = CTRL ALT, D, exec, $scripts/yt.sh
+bind = $mainMod CTRL, S, exec, $scripts/screenshot.sh
+
+# Group keybindings
+bind = $mainMod, G, togglegroup, s
 bindd = $mainMod Control, H, $d change active group backwards   , changegroupactive, b
 bindd = $mainMod Control, L, $d change active group forwards  , changegroupactive, f
 bind = $mainMod, SHIFT_R, exec, systemctl suspend
+bind = $mainMod SHIFT, TAB, changegroupactive, f
+
+
+# Hyprland keybindings
+bind = $mainMod, A, togglesplit,
+bind = $mainMod, B, exec, $browser
+bind = $mainMod, C, killactive,
+bind = $mainMod, P, pseudo, # dwindle
+bind = $mainMod, V, exec, code
+bind = $mainMod, W, togglefloating,
+bind = $mainMod SHIFT, R, exec, hyprctl reload
+bind = $mainMod, BACKSPACE, exit,
+bind = ALT_R, Return, fullscreen, # toggle the window between focus and fullscreen
+bind = $mainMod, escape, exec, eww close bar_widget || eww open bar_widget 
+bind = CTRL ALT, L, exec, hyprlock
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
 bind = $mainMod, right, movefocus, r
 bind = $mainMod, up, movefocus, u
 bind = $mainMod, down, movefocus, d
-bind = Alt, Tab, movefocus, d
-bindd = $mainMod, Tab,$d Cycle focus, cyclenext
-# bind= $mainMod, Tab, 
-# bind= $mainMod SHIFT, Tab, exec, 
+bind = ALT, TAB, movefocus, d
+bindd = $mainMod, TAB, Cycle focus, cyclenext
 
 # Switch workspaces with mainMod + [0-9]
 bind = $mainMod, 1, workspace, 1
@@ -76,7 +87,6 @@ bind = $mainMod, 8, workspace, 8
 bind = $mainMod, 9, workspace, 9
 bind = $mainMod, 0, workspace, 10
 
-
 # Move active window to a workspace with mainMod + SHIFT + [0-9]
 bind = $mainMod SHIFT, 1, movetoworkspace, 1
 bind = $mainMod SHIFT, 2, movetoworkspace, 2
@@ -89,21 +99,6 @@ bind = $mainMod SHIFT, 8, movetoworkspace, 8
 bind = $mainMod SHIFT, 9, movetoworkspace, 9
 bind = $mainMod SHIFT, 0, movetoworkspace, 10
 
-# F1-F12
-# bind = ,F1, exec,
-# bind = ,F2, exec,
-# bind = ,F3, exec,
-# bind = ,F4, exec,
-# bind = ,F5, exec, $scripts/mpvpaper.sh
-# bind = ,F6, exec,killall eww || eww open bar_widget
-# bind = ,F7, exec, mpv "--loop no-audio" "*" /home/histed/Videos/random/bagas_bagas.mp4
-bind = ,F8, exec, $scripts/toggle_hypridle.sh
-bind = ,F9, exec, $scripts/game_menu.sh
-bind = ,F10, exec, $scripts/record.sh
-# bind = ,F11, fullscreen,
-bindel = ,F12, exec, $scripts/time.sh
-bindel = $mainMod, escape, exec, eww close bar_widget || eww open bar_widget # killall waybar || waybar #eww close bar_widget || eww open bar_widget
-
 # Example special workspace (scratchpad)
 bind = $mainMod, S, togglespecialworkspace, magic
 bind = $mainMod SHIFT, S, movetoworkspace, special:magic
@@ -112,7 +107,7 @@ bind = $mainMod SHIFT, S, movetoworkspace, special:magic
 bind = $mainMod, mouse_down, workspace, e+1
 bind = $mainMod, mouse_up, workspace, e-1
 
-# Move/resize windo55ws with mainMod + LMB/RMB and dragging
+# Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
 bindm = $mainMod, X, resizewindow
@@ -121,21 +116,24 @@ bindm = $mainMod, Z, movewindow
 # Switch workspaces to a relative workspace
 bind = $mainMod+Ctrl, Right, workspace, r+1
 bind = $mainMod+Ctrl, Left, workspace, r-1
-# Switch workspaces with ctrl+alt
-# bind = CTRL ALT, left, workspace, e-1
-# bind = CTRL ALT, right, workspace, e+1
-# bind = CTRL ALT, backspace, workspace, previous
 
 # Move to the first empty workspace
 bind = $mainMod+Ctrl, Down, workspace, empty
 
-# Laptop multimedia keys for volume and LCD brightness
+
+# Multimedia & audio
 bindel = ,XF86AudioRaiseVolume, exec, wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@ 5%+
 bindel = ,XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
 bindel = ,XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
 bindel = ,XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
+bindel = SHIFT, right, exec, wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@ 5%+
+bindel = SHIFT, left, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
+
+# LCD brightness
 bindel = ,XF86MonBrightnessUp, exec, brightnessctl -e4 -n2 set 5%+
 bindel = ,XF86MonBrightnessDown, exec, brightnessctl -e4 -n2 set 5%-
+bindel = SHIFT, up, exec, brightnessctl -e4 -n2 set 5%+
+bindel = SHIFT, down, exec, brightnessctl -e4 -n2 set 5%-
 
 # Requires playerctl
 bindl = , XF86AudioNext, exec, playerctl next
@@ -143,29 +141,11 @@ bindl = , XF86AudioPause, exec, playerctl play-pause
 bindl = , XF86AudioPlay, exec, playerctl play-pause
 bindl = , XF86AudioPrev, exec, playerctl previous
 
-# Brightness
-bindel = ALT, up, exec, brightnessctl set +10%
-bindel = ALT, down, exec, brightnessctl set 10%-
-
-# Full screen screenshot → save to file + copy to clipboard + 5s notification
-bind = , Print, exec, bash -c 'f=~/Pictures/Screenshot/full-$(date +%s).png; grim "$f" && wl-copy < "$f" && notify-send -t 3000 "📸 Full Screenshot" "Saved and copied to clipboard"'
-
-# Area screenshot → save to file + copy to clipboard + 5s notification
-bind = SHIFT, Print, exec, bash -c 'geo=$(slurp); f=~/Pictures/Screenshot/area-$(date +%s).png; grim -g "$geo" "$f" && grim -g "$geo" - | wl-copy && notify-send -t 3000 "📸 Area Screenshot" "Saved and copied to clipboard"'
-
-# Area screenshot → copy to clipboard only + 5s notification
-bind = CTRL SHIFT, Print, exec, bash -c 'geo=$(slurp); grim -g "$geo" - | wl-copy && notify-send -t 3000 "📋 Area Screenshot" "Copied to clipboard only"'
-
-#lock
-bind = CTRL ALT, L, exec, hyprlock
-
-
-$d=[$wm|Resize Active Window]
 # Resize windows
-bindde = $mainMod Shift, Right, $d resize window right , resizeactive, 30 0
-bindde = $mainMod Shift, Left, $d resize window left, resizeactive, -30 0
-bindde = $mainMod Shift, Up, $d resize window up, resizeactive, 0 -30
-bindde = $mainMod Shift, Down, $d resize  window down, resizeactive, 0 30
+bindde = $mainMod SHIFT, Right, $d resize window right , resizeactive, 30 0
+bindde = $mainMod SHIFT, Left, $d resize window left, resizeactive, -30 0
+bindde = $mainMod SHIFT, Up, $d resize window up, resizeactive, 0 -30
+bindde = $mainMod SHIFT, Down, $d resize  window down, resizeactive, 0 30
 
 # Move active window around current workspace with mainMod + SHIFT + CTRL [←→↑↓]
 $moveactivewindow=grep -q "true" <<< $(hyprctl activewindow -j | jq -r .floating) && hyprctl dispatch moveactive
