--- a/hypr/configs/windowrule.conf
+++ b/hypr/configs/windowrule.conf
@@ -6,21 +6,23 @@
 windowrule = suppressevent maximize, class:.*
 
 #Kitty
-windowrulev2 = opacity 0.60 $& 0.60 $& 1,class:^(kitty)$
-windowrulev2 = opacity 0.60 $& 0.60 $& 1,class:^(kitty)$
+# windowrulev2 = opacity 0.60 $& 0.60 $& 1,class:^(kitty)$
+# windowrulev2 = opacity 0.60 $& 0.60 $& 1,class:^(kitty)$
 windowrulev2 = opacity 0.60 $& 0.60 $& 1,class:^(floatingterm)$
 windowrulev2 = group, class:^([Cc]ode)$
 windowrulev2 = group, class:^([Cc]ode-oss)$
+
 # Spotify
 windowrulev2 = opacity 0.80 $& 0.80 $& 1,class:^([Ss]potify)$
-windowrulev2 = opacity 0.85 $& 0.85 $& 1,initialTitle:^([Ss]potify Free)$
-windowrulev2 = opacity 0.85 $& 0.85 $& 1,initialTitle:^([Ss]potify Premium)$
+windowrulev2 = opacity 0.80 $& 0.80 $& 1,initialTitle:^([Ss]potify Free)$
+windowrulev2 = opacity 0.80 $& 0.80 $& 1,initialTitle:^([Ss]potify Premium)$
 
-#windowrulev2 = opacity 0.50 $& 0.50 $& 1,class:^(Rofi)$
+# Vscode
+# windowrulev2 = opacity 0.96 $& 0.00 $& 1,class:^([Cc]ode-oss)$
+windowrulev2 = opacity 0.50 $& 0.50 $& 1,class:^(Rofi)$
 
 # █░░ ▄▀█ █▄█ █▀▀ █▀█   █▀█ █░█ █░░ █▀▀ █▀
 # █▄▄ █▀█ ░█░ ██▄ █▀▄   █▀▄ █▄█ █▄▄ ██▄ ▄█
-
 layerrule = blur,rofi
 layerrule = ignorezero,rofi
 layerrule = blur,notifications
