add wallpaper swither rofi

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -1,9 +1,8 @@
 # Hyprland configuration file
 #SOURCE
 
-$configs = $HOME/.config/hypr/configs
+$configs = $HOME/.config/hypr/conf
 $animations = $HOME/.config/hypr/animations
-
 
 # Load configurations
 source = $configs/decorations.conf
@@ -18,13 +17,13 @@ source = $configs/workspace.conf
 
 #Animations
 # source = $animations/ja.conf
-source = $animations/LimeFrenzy.conf
+# source = $animations/LimeFrenzy.conf
 # source = $animations/me-1.conf
 # source = $animations/me-2.conf
 # source = $animations/minimal-1.conf
 # source = $animations/minimal-2.conf
 # source = $animations/moving.conf
-# source = $animations/optimized.conf
+source = $animations/optimized.conf
 # source = $animations/standard.conf
 # source = $animations/theme.conf
 # source = $animations/vertical.conf
