--- a/hypr/animations/vertical.conf
+++ b/hypr/animations/vertical.conf
@@ -10,6 +10,7 @@ animations {
     bezier = easeOutCirc, 0, 0.55, 0.45, 1
     bezier = easeOutCubic, 0.33, 1, 0.68, 1
     bezier = easeinoutsine, 0.37, 0, 0.63, 1
+    bezier = liner, 1, 1, 1, 1, 
 
     # Windows
     animation = windowsIn, 1, 1.5, easeinoutsine, popin 60% # window open
@@ -27,8 +28,11 @@ animations {
 	animation = layers, 1, 1.5, easeinoutsine, popin
 
     # Workspaces
-    #animation = workspaces, 1, 3, fluent_decel, slidefade 30% # styles: slide, slidevert, fade, slidefade, slidefadevert
+    animation = workspaces, 1, 3, fluent_decel, slidefade 30% # styles: slide, slidevert, fade, slidefade, slidefadevert
     animation = workspaces, 1, 3, fluent_decel, slidefadevert 30% # styles: slide, slidevert, fade, slidefade, slidefadevert
-
+    
 	animation = specialWorkspace, 1, 2, fluent_decel, slidefade 10%
+
+    animation = border, 1, 1, liner
+    animation = borderangle, 1, 24, liner, loop
 }
