--- a/hypr/hypridle.conf
+++ b/hypr/hypridle.conf
@@ -3,7 +3,11 @@ general{
     before_sleep_cmd = loginctl lock-session
     after_sleep_cmd = hyprctl dispatch dpms on
 }
-
+listener {
+    timeout = 240                        # 5min
+    on-timeout = "$HOME/.config/hypr/scripts/text_animation/anitext.sh" && "$HOME/.config/hypr/scripts/weather/weather.sh"
+    on-resume = pkill anitext.sh && pkill weather.sh   # lock screen when timeout has passed
+}
 listener{
     timeout = 240
     on-timeout = bash -c 'hyprctl switchxkblayout at-translated-set-2-keyboard 0; pidof hyprlock >/dev/null || hyprlock'
