--- a/hypr/hyprlock.conf
+++ b/hypr/hyprlock.conf
@@ -4,7 +4,7 @@ general{
 }
 
 background{
-	path = $HOME/Pictures/Wallpaper/imphnen.png
+	path = $HOME/Pictures/Wallpaper/mayat.jpeg
 	blur_size=5
 	brightness = 0.7
 	blur_passes=1
