--- a/hypr/conf/keybindings.conf
+++ b/hypr/conf/keybindings.conf
@@ -10,6 +10,8 @@ $Spotify = LD_PRELOAD=/usr/lib/spotify-adblock.so spotify
 $btop = $terminal -e btop
 $aps = rofi -show window -show-icons -theme $HOME/.config/rofi/themes/gamelauncher_5.rasi
 $launcher = $HOME/.config/hypr/scripts/launcher
+$conky = conky -c $HOME/.config/conky/Regulus.conf
+$float = $HOME/.config/hypr/scripts/float_app.sh
 ###################
 ### KEYBINDINGS ###
 ###################
@@ -24,28 +26,27 @@ bind = $mainMod, D, exec, discord
 bind = $mainMod, E, exec, $file
 bind = CTRL, TAB, exec, $aps
 
-
-
 # Floating aplication
 bind = CTRL SHIFT, Escape, exec, [float; move 20% 17.5%; size 60% 65%] $btop  
 bind = CTRL ALT, E, exec, [float; move 0.5% 1%; size 55% 56% ] $file
 bind = CTRL ALT, C, exec, [float; move 51.50% 64%; size 48% 35%] $cava
 bind = CTRL ALT, S, exec, [float; move -3.5% -3.5%; size 50% 60%] $Spotify 
 bind = CTRL ALT, X, exec, [float; move 0.5% 5%; size 55% 56% ] $music
-bind = $mainMod SHIFTs, Q,  exec, [float; move 20% 17.5%; size 60% 65%] $terminal
+bind = $mainMod SHIFT, Q,  exec, [float; move 20% 17.5%; size 60% 65%] $terminal
 bind = $mainMod SHIFT, C, exec, [float; move 0.5% 74%; size 99% 25%] $cava
 bind = SHIFT, F12, exec, [float; move 59.5% 6%; size 39.5% 65% ] mpv --loop=inf --no-audio  $HOME/Videos/random/lupa.mp4
+bind = CTRL SHIFT, Q, exec, [float; move 60% 5%] $conky
 
 #launcher
-bind =$mainMod, M, exec, $launcher/wallpaper_select.sh
-bind = ALT, Z, exec, $launcher/clipboard_launcher.sh
+bind = $mainMod, M, exec, $launcher/wallpaper_select.sh
+bind = ALT, X, exec, $launcher/clipboard_launcher.sh
 bind = $mainMod, return, exec, $launcher/power_menu.sh
 bind = ,F9, exec, $launcher/game_menu.sh
 bind = $mainMod, H, exec, $launcher/key_hints.sh
 bind = ALT, SPACE, exec, $launcher/emoji_launcher.sh
+bind = $mainMod CTRL, S, exec, $launcher/screenshot.sh
 
 # Exec scripts
-# bind = $mainMod, M, exec, $scripts/toggle_waybar.sh
 bind = $mainMod, N, exec, $scripts/randomwallpaper.sh next
 bind = ,F8, exec, $scripts/toggle_hypridle.sh
 bind = ,F10, exec, $scripts/record.sh
@@ -53,7 +54,7 @@ bind = ,F12, exec, $scripts/time.sh
 bind = ,Print, exec, $scripts/scr.sh full 
 bind = SHIFT_R, Print, exec, $scripts/scr.sh area
 bind = CTRL ALT, D, exec, $launcher/yt.sh
-bind = $mainMod CTRL, S, exec, $scripts/screenshot.sh
+
 
 
 
