--- a/hypr/conf/windowrule.conf
+++ b/hypr/conf/windowrule.conf
@@ -6,9 +6,8 @@
 windowrule = suppressevent maximize, class:.*
 
 #Kitty
-# windowrulev2 = opacity 0.70 $& 0.70 $& 1,class:^(kitty)$
-# windowrulev2 = opacity 0.60 $& 0.60 $& 1,class:^(kitty)$
-windowrulev2 = opacity 0.60 $& 0.60 $& 1,class:^(floatingterm)$
+windowrulev2 = opacity 0.85 $& 0.85 $& 1,class:^(kitty)$
+# windowrulev2 = opacity 0.60 $& 0.60 $& 1,class:^(floatingterm)$
 windowrulev2 = group, class:^([Cc]ode)$
 windowrulev2 = group, class:^([Cc]ode-oss)$
 
