--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -11,7 +11,7 @@ source = $configs/keybindings.conf
 source = $configs/monitor.conf
 source = $configs/permission.conf
 source = $configs/startup.conf
-source = $configs/variable.conf
+source = $configs/env.conf
 source = $configs/windowrule.conf
 source = $configs/workspace.conf
 
