--- a/hypr/conf/decorations.conf
+++ b/hypr/conf/decorations.conf
@@ -13,7 +13,7 @@ general {
 }
 
 general {
-    col.active_border = $color2 $color3 $color4 $color13
+    col.active_border = $color1 $color2 $color3 $color4 $color5 $color6 $color8 $color9 $color11 $color13 
     col.inactive_border = rgba(0,0,0,0) rgba(0,0,0,1)
 }
 
@@ -28,7 +28,7 @@ decoration {
 
 
     shadow {
-        enabled = true
+        enabled = false
         range = 5
         render_power = 3
         color = rgba(1a1a1aee)
