--- a/hypr/conf/monitor.conf
+++ b/hypr/conf/monitor.conf
@@ -2,5 +2,6 @@
 ### MONITORS ###
 ################
 
-monitor=,preferred,auto,auto
+monitor = LVDS-1, 1366x768@60, 0x0,1
+# monitor = ,preferred,auto,auto
 
