--- a/hypr/hypridle.conf
+++ b/hypr/hypridle.conf
@@ -1,26 +1,30 @@
-general{
+$f = "/var/lib/AccountsService/icons/$USER"
+
+general {
     lock_cmd = bash -c 'pidof hyprlock >/dev/null || hyprlock'
     before_sleep_cmd = loginctl lock-session
     after_sleep_cmd = hyprctl dispatch dpms on
 }
+
 listener {
-    timeout = 240                        # 5min
-    on-timeout = "$HOME/.config/hypr/scripts/text_animation/anitext.sh" && "$HOME/.config/hypr/scripts/weather/weather.sh"
-    on-resume = pkill anitext.sh && pkill weather.sh   # lock screen when timeout has passed
-}
-listener{
     timeout = 240
-    on-timeout = bash -c 'hyprctl switchxkblayout at-translated-set-2-keyboard 0; pidof hyprlock >/dev/null || hyprlock'
+    on-timeout = bash -c '$HOME/.config/hypr/scripts/hyprlock.sh'
     on-resume = hyprctl dispatch dpms on
 }
 
-listener{
+listener {
+    timeout = 120
+    on-timeout = notify-send -i "$f" -t 7000 -a "hyprstop" "Screen Lock Soon" "Your session will lock in 2 minutes!"
+    on-resume = notify-send -i "$f" -t 5000 -a "hyprstart" "Screen Lock Cancelled" "Activity detected, auto-lock stopped"
+}
+
+listener {
     timeout = 600
     on-timeout = brightnessctl -s set 10
     on-resume = brightnessctl -r
 }
 
-listener{
+listener {
     timeout = 660
     on-timeout = systemctl suspend
 }
