--- a/hypr/conf/env.conf
+++ b/hypr/conf/env.conf
@@ -1,7 +1,3 @@
-#############################
-### ENVIRONMENT VARIABLES ###
-#############################
-
 env = LIBVA_DRIVER_NAME,i965
 env = GDK_BACKEND,wayland,x11
 env = QT_QPA_PLATFORM,wayland;xcb
@@ -14,11 +10,11 @@ env = XCURSOR_PATH, /usr/share/icons:$HOME/.icons:$HOME/.local/share/icons
 # Mouse cursor
 env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
-# env = XCURSOR_THEME,Kureiji-Ollie-v2
 # env = XCURSOR_THEME,Vestia-Zeta-v2
 # env = XCURSOR_THEME,Vestia-Zeta
-# env = XCURSOR_THEME,Papirus
-env = XCURSOR_THEME,miku-cursor-linux
+# env = XCURSOR_THEME,LyraB-cursors
+# env = XCURSOR_THEME,miku-cursor-linux
+env = XCURSOR_THEME,Hatsune-Miku
 # env = XCURSOR_THEME,Kureiji-Ollie-v2
 # env = XCURSOR_THEME,Kureiji-Ollie
 # env = GTK_THEME,Graphite-pink-Light
