--- a/hypr/conf/keybindings.conf
+++ b/hypr/conf/keybindings.conf
@@ -1,62 +1,57 @@
-# Set programs that you use
-$scripts = $HOME/.config/hypr/scripts
-$terminal = kitty
-$file =  $terminal -e $scripts/yazi.sh
-$menu = rofi -show drun -show-icons -icon-theme Papirus
-$browser = brave
-$music = $terminal -e cmus
-$cava = $terminal -e cava
-$Spotify = LD_PRELOAD=/usr/lib/spotify-adblock.so spotify
-$btop = $terminal -e btop
-$aps = rofi -show window -show-icons -theme $HOME/.config/rofi/themes/gamelauncher_5.rasi
-$launcher = $HOME/.config/hypr/scripts/launcher
-$conky = conky -c $HOME/.config/conky/Regulus.conf
-$float = $HOME/.config/hypr/scripts/float_app.sh
-###################
-### KEYBINDINGS ###
-###################
-
 $mainMod = SUPER
 
 # Open application
-bind = $mainMod, Q, exec, $terminal
-bind = $mainMod, R, exec, $menu
-bind = $mainMod, T, exec, Telegram
-bind = $mainMod, D, exec, discord
-bind = $mainMod, E, exec, $file
-bind = CTRL, TAB, exec, $aps
+$app = $HOME/.config/hypr/scripts/apps.sh
+bind = $mainMod, Q, exec, kitty
+bind = $mainMod, R, exec, $app Menu
+bind = $mainMod, T, exec, $app Tele
+bind = $mainMod, D, exec, $app Discord
+bind = $mainMod, E, exec, $app Yazi
+bind = CTRL, TAB, exec, $app Window
+bind = $mainMod, B, exec, $app Brave
+bind = CTRL ALT, T, exec, $app Foot
+bind = $mainMod, V, exec, $app Code
 
 # Floating aplication
-bind = CTRL SHIFT, Escape, exec, [float; move 20% 17.5%; size 60% 65%] $btop  
-bind = CTRL ALT, E, exec, [float; move 0.5% 1%; size 55% 56% ] $file
-bind = CTRL ALT, C, exec, [float; move 51.50% 64%; size 48% 35%] $cava
-bind = CTRL ALT, S, exec, [float; move -3.5% -3.5%; size 50% 60%] $Spotify 
-bind = CTRL ALT, X, exec, [float; move 0.5% 5%; size 55% 56% ] $music
-bind = $mainMod SHIFT, Q,  exec, [float; move 20% 17.5%; size 60% 65%] $terminal
-bind = $mainMod SHIFT, C, exec, [float; move 0.5% 74%; size 99% 25%] $cava
-bind = SHIFT, F12, exec, [float; move 59.5% 6%; size 39.5% 65% ] mpv --loop=inf --no-audio  $HOME/Videos/random/lupa.mp4
-bind = CTRL SHIFT, Q, exec, [float; move 60% 5%] $conky
+bind = CTRL SHIFT, Escape, exec, [float; move 20% 17.5%; size 60% 65%] $app Btop
+bind = CTRL ALT, E, exec, [float; move 0.5% 1%; size 55% 56% ] $app yazi
+bind = CTRL ALT, C, exec, [float; move 51.50% 64%; size 48% 35%] $app Cava
+bind = CTRL ALT, S, exec, [float; move -3.5% -3.5%; size 50% 60%] $app Spotify 
+bind = CTRL ALT, X, exec, [float; move 0.5% 5%; size 55% 56% ] $app Cmus
+bind = $mainMod SHIFT, Q,  exec, [float; move 20% 17.5%; size 60% 65%] $app Foot
+bind = $mainMod SHIFT, C, exec, [float; move 0.5% 74%; size 99% 25%] $app Cava
+bind = SHIFT, F12, exec, [float; move 59.5% 6%; size 39.5% 65% ] $app Mpv
+bind = CTRL SHIFT, Q, exec, [float; move 60% 5%] $app Conky
 
-#launcher
-bind = $mainMod, M, exec, $launcher/wallpaper_select.sh
-bind = ALT, X, exec, $launcher/clipboard_launcher.sh
+# Launcher
+$launcher = $HOME/.config/hypr/scripts/launcher
+$rofi = $HOME/.config/hypr/scripts/launcher/rofi_launch.sh
+bind = $mainMod, M, exec, $launcher/wallpaper_select.sh foto
+bind = ALT, X, exec, /home/iuno/.config/hypr/scripts/launcher/clipboard_launcher.sh#$rofi Clipboard
 bind = $mainMod, return, exec, $launcher/power_menu.sh
-bind = ,F9, exec, $launcher/game_menu.sh
 bind = $mainMod, H, exec, $launcher/key_hints.sh
-bind = ALT, SPACE, exec, $launcher/emoji_launcher.sh
-bind = $mainMod CTRL, S, exec, $launcher/screenshot.sh
+bind = ALT, SPACE, exec, $rofi Emoji
+bind = $mainMod, L, exec, $launcher/wallpaper_select.sh video
 
 # Exec scripts
-bind = $mainMod, N, exec, $scripts/randomwallpaper.sh next
-bind = ,F8, exec, $scripts/toggle_hypridle.sh
-bind = ,F10, exec, $scripts/record.sh
-bind = ,F12, exec, $scripts/time.sh
-bind = ,Print, exec, $scripts/scr.sh full 
-bind = SHIFT_R, Print, exec, $scripts/scr.sh area
+$scr = $HOME/.config/hypr/scripts
+bind = $mainMod, N, exec, $launcher/wallpaper_select.sh next
 bind = CTRL ALT, D, exec, $launcher/yt.sh
 
+# Screenshot & Record
+$scrc = $HOME/.config/hypr/scripts/launcher/screenshot_record.sh
+bind = ,Print, exec, $scrc full 
+bind = SHIFT_R, Print, exec, $scrc ArEa
+bind = $mainMod CTRL, S, exec, $scrc
+bind = ,F10, exec, $scrc ReCoRdInG
 
-
+# Toggle 
+$tgl = $HOME/.config/hypr/scripts/toggle.sh
+bind = CTRL ALT, L, exec, $scr/hyprlock.sh
+bind = $mainMod, escape, exec, $tgl Eww
+bind = $mainMod SHIFT, escape, exec,  $tgl Waybar
+bind = ,F8, exec, $tgl Hypridle
+bind = ,F12, exec, $tgl Clock
 
 # Group keybindings
 bind = $mainMod, G, togglegroup, s
@@ -65,20 +60,14 @@ bindd = $mainMod Control, L, $d change active group forwards  , changegroupactiv
 bind = $mainMod, SHIFT_R, exec, systemctl suspend
 bind = $mainMod SHIFT, TAB, changegroupactive, f
 
-
 # Hyprland keybindings
 bind = $mainMod, A, togglesplit,
-bind = $mainMod, B, exec, $browser
 bind = $mainMod, C, killactive,
 bind = $mainMod, P, pseudo, # dwindle
-bind = $mainMod, V, exec, code
 bind = $mainMod, W, togglefloating,
 bind = $mainMod SHIFT, R, exec, hyprctl reload
 bind = $mainMod, BACKSPACE, exit,
 bind = ALT_R, Return, fullscreen, # toggle the window between focus and fullscreen
-bind = $mainMod, escape, exec, pkill eww || eww open bar_widget 
-bind = $mainMod SHIFT, escape, exec,  pkill waybar || waybar
-bind = CTRL ALT, L, exec, $scripts/hyprlock.sh
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
@@ -132,7 +121,6 @@ bind = $mainMod+Ctrl, Left, workspace, r-1
 
 # Move to the first empty workspace
 bind = $mainMod+Ctrl, Down, workspace, empty
-
 
 # Multimedia & audio
 bindel = ,XF86AudioRaiseVolume, exec, wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@ 5%+
