--- a/hypr/conf/startup.conf
+++ b/hypr/conf/startup.conf
@@ -1,7 +1,3 @@
-#################
-### AUTOSTART ###
-#################
-
 $scripts = $HOME/.config/hypr/scripts
 $wallpaper=  $HOME/Pictures/Wallpaper
 $vol = pamixer --get-volume
@@ -12,8 +8,8 @@ exec-once = /usr/bin/gnome-keyring-daemon --start --components=secrets,pkcs11,ss
 exec-once = hypridle
 
 #Wallpaper
-exec-once = swww-daemon
-exec-once = swww img $wallpaper/mayat.jpeg --transition-type none
+# exec-once = swww-daemon
+# exec-once = swww img $wallpaper/mayat.jpeg --transition-type none
 # exec-once = $scripts/randomwallpaper.sh daemon
 
 # Setup clipboard
