--- a/hypr/hyprlock.conf
+++ b/hypr/hyprlock.conf
@@ -4,10 +4,10 @@ general{
 }
 
 background{
-	path = $HOME/Pictures/Wallpaper/mayat.jpeg
-	blur_size=5
+    path = /home/iuno/Pictures/Wallpaper/C.jpg
+	# blur_size=0
 	brightness = 0.7
-	blur_passes=1
+	# blur_passes=1
 }
 
 
@@ -40,7 +40,7 @@ input-field{
 }
 
 label{
-    text = cmd[update:50] cat  ~/.config/hypr/scripts/text_animation/scripttext
+    text = cmd[update:50] cat  /tmp/scripttext
     halign = center
     valign = center
     position = 6,344
@@ -50,7 +50,7 @@ label{
 }
 
 label{
-    text = cmd[update:50] cat ~/.config/hypr/scripts/text_animation/scripttext
+    text = cmd[update:50] cat /tmp/scripttext
     halign = center
     valign = center
     position = 3,347
@@ -60,7 +60,7 @@ label{
 }
 
 label{
-    text = cmd[update:50] cat ~/.config/hypr/scripts/text_animation/scripttext
+    text = cmd[update:50] cat /tmp/scripttext
     halign = center
     valign = center
     position = 0,350
@@ -70,7 +70,7 @@ label{
 }
 
 label{
-	text = cmd[update:1000] cat ~/.config/hypr/scripts/weather/weathertext
+	text = cmd[update:1000] cat /tmp/weathertext
 	color = rgba(240, 151, 175, 1) 
 	font_size = 10
     font_family = Monocraft Nerd Font
@@ -100,7 +100,7 @@ shape{
 label{
 	text = cmd[update:1000] echo "$TIME12"
 	color = rgba(200,200,200,1.0)
-	font_size = 55
+	font_size = 50
 	font_family = Monocraft Nerd Font
 	position = -50,110
 	halign = right
