--- a/hypr/conf/windowrule.conf
+++ b/hypr/conf/windowrule.conf
@@ -1,7 +1,3 @@
-##############################
-### WINDOWS AND WORKSPACES ###
-##############################
-
 # Ignore maximize requests from apps. You'll probably like this.
 windowrule = suppressevent maximize, class:.*
 
@@ -10,6 +6,7 @@ windowrulev2 = opacity 0.85 $& 0.85 $& 1,class:^(kitty)$
 # windowrulev2 = opacity 0.60 $& 0.60 $& 1,class:^(floatingterm)$
 windowrulev2 = group, class:^([Cc]ode)$
 windowrulev2 = group, class:^([Cc]ode-oss)$
+windowrulev2 = opacity 0.85 $& 0.85 $& 1,class:^(foot)$
 
 # Spotify
 windowrulev2 = opacity 0.80 $& 0.80 $& 1,class:^([Ss]potify)$
