--- a/mako/config
+++ b/mako/config
@@ -1,56 +1,74 @@
-# font=MesloLGS NF Bold 10
-# background-color=#1a1a1a40
-# text-color=#ffffff
-# border-color=#078bf7ff
-# border-size=3
-# padding=8
-# margin=12
-# anchor=top-center
-# ignore-timeout=true
-# default-timeout=4000
-# border-radius=30
-# max-visible=1
-# layer=top
-# width=400
-# height=200
-# history=0
-# max-history=0
-# on-button-middle=exec 
-# on-notify=exec mpv "/home/histed/Music/BEAUTY! - SLOWED.mp3"
-# actions=1
-# on-button-left=invoke-default-action
-# border-color=#f7073bff
-# background-color=#1a1a1a40
-
-
+include=~/.config/mako/apps.conf
 # See man 5 mako
-
 max-visible=2
+
 sort=-time
-output=HDMI-A-1
-layer=top
+
+output=LVDS-1
+
+layer=overlay
+
 anchor=top-right
 
 font=MesloLGS NF Bold 10
+
 background-color=#1a1a1a40
+
 text-color=#d5d6d7
+
 width=400
-height=400
-margin=12
+
+height=300
+
+margin=5
+
 padding=10
+
 border-size=3
-border-color=#078bf7ff
-border-radius=30
+
+border-color=#A68FAB
+
+border-radius=20
+
 progress-color=over #5588AAF0
+
 icons=1
+
+icon-border-radius=10
+
 max-icon-size=64
-icon-path=""
+
+icon-path=~/.icons:/usr/share/icons/Papirus
+
 markup=1
+
 actions=1
-# format=<b>%s</b>\n%b Default when grouped: (%g) <b>%s</b>\n%b
-default-timeout=5000
-# ignore-timeout=0
+
+format= <b>%s</b>\n%b
+
 group-by=none
+
+max-visible=5
+
+#format=<b>%s</b>\n%b Default when grouped: (%g) <b>%s</b>\n%b
+default-timeout=5000
+
+# ignore-timeout=0
+
+group-by=none
+
 history=0
+
 max-history=0
-ignore-timeout=true
+
+ignore-timeout=false
+
+text-alignment=center
+
+[mode=do-not-disturb]
+invisible=1
+
+
+
+
+
