--- a/yazi/package.toml
+++ b/yazi/package.toml
@@ -10,3 +10,8 @@ hash = "f970182bee3543831796629ccf078553"
 use = "yazi-rs/flavors:dracula"
 rev = "9cd2ac4"
 hash = "c0bfefbff165007a76c0933ed0432e3f"
+
+[[flavor.deps]]
+use = "yazi-rs/flavors:catppuccin-macchiato"
+rev = "9cd2ac4"
+hash = "bc3478e46ebfc411d611e1ccaf04d26a"
